@@ -3,3 +3,4 @@ Initial Release 1.0.0
 
 ** Improvement
     * [FELIX-3861] - Set felix.webconsole.category on Web Console plugins
+    * [FELIX-5510] - Remove usage of org.json form web console plugins
